// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AccuracyBar /> should adopt percent and color props 1`] = `
<styled.div>
  <styled.div
    bgColor="green"
  >
    <styled.h1
      percent={24}
      textShadowColor="green"
    >
      24
      % Accuracy
    </styled.h1>
    <styled.div
      bgColor="green"
      percent={24}
    />
  </styled.div>
</styled.div>
`;

exports[`<AccuracyBar /> should match baseline snapshot 1`] = `
<styled.div>
  <styled.div
    bgColor="purple"
  >
    <styled.h1
      percent={0}
      textShadowColor="purple"
    >
      0
      % Accuracy
    </styled.h1>
    <styled.div
      bgColor="purple"
      percent={0}
    />
  </styled.div>
</styled.div>
`;
